src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

	import ast.*;
	import ast.definition.*;
	import ast.expression.*;
	import ast.type.*;
	import ast.sentence.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, INT_CONSTANT=40, REAL_CONSTANT=41, IDENT=42, CHAR_CONSTANT=43, 
		LINE_COMMENT=44, MULTILINE_COMMENT=45, WHITESPACE=46;
	public static final int
		RULE_start = 0, RULE_definiciones = 1, RULE_definicion = 2, RULE_definicionVariable = 3, 
		RULE_definicionStruct = 4, RULE_bodyStruct = 5, RULE_definicionFuncion = 6, 
		RULE_definicionInsideFunction = 7, RULE_definicionVariableLocal = 8, RULE_param = 9, 
		RULE_sentencia = 10, RULE_sentencias = 11, RULE_expr = 12, RULE_paramExpr = 13, 
		RULE_tipo = 14, RULE_tipoSimple = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "definiciones", "definicion", "definicionVariable", "definicionStruct", 
			"bodyStruct", "definicionFuncion", "definicionInsideFunction", "definicionVariableLocal", 
			"param", "sentencia", "sentencias", "expr", "paramExpr", "tipo", "tipoSimple"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "':'", "';'", "'struct'", "'{'", "'};'", "'('", "')'", 
			"'}'", "','", "'println'", "'printsp'", "'print'", "'read'", "'='", "'if'", 
			"'else'", "'while'", "'return'", "'.'", "'['", "']'", "'!'", "'-'", "'*'", 
			"'/'", "'+'", "'=='", "'!='", "'>='", "'<='", "'<'", "'>'", "'&&'", "'||'", 
			"'cast<'", "'float'", "'int'", "'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "IDENT", "CHAR_CONSTANT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Program ast;
		public DefinicionesContext definiciones;
		public DefinicionesContext definiciones() {
			return getRuleContext(DefinicionesContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			((StartContext)_localctx).definiciones = definiciones();
			 ((StartContext)_localctx).ast =  new Program(((StartContext)_localctx).definiciones.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionesContext extends ParserRuleContext {
		public List<Definitions> list = new ArrayList<Definitions>();
		public DefinicionContext definicion;
		public List<DefinicionContext> definicion() {
			return getRuleContexts(DefinicionContext.class);
		}
		public DefinicionContext definicion(int i) {
			return getRuleContext(DefinicionContext.class,i);
		}
		public DefinicionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definiciones; }
	}

	public final DefinicionesContext definiciones() throws RecognitionException {
		DefinicionesContext _localctx = new DefinicionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definiciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << IDENT))) != 0)) {
				{
				{
				setState(35);
				((DefinicionesContext)_localctx).definicion = definicion();
				 _localctx.list.add(((DefinicionesContext)_localctx).definicion.ast); 
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionContext extends ParserRuleContext {
		public Definitions ast;
		public DefinicionVariableContext definicionVariable;
		public DefinicionStructContext definicionStruct;
		public DefinicionFuncionContext definicionFuncion;
		public DefinicionVariableContext definicionVariable() {
			return getRuleContext(DefinicionVariableContext.class,0);
		}
		public DefinicionStructContext definicionStruct() {
			return getRuleContext(DefinicionStructContext.class,0);
		}
		public DefinicionFuncionContext definicionFuncion() {
			return getRuleContext(DefinicionFuncionContext.class,0);
		}
		public DefinicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicion; }
	}

	public final DefinicionContext definicion() throws RecognitionException {
		DefinicionContext _localctx = new DefinicionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definicion);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				((DefinicionContext)_localctx).definicionVariable = definicionVariable();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).definicionVariable.ast; 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				((DefinicionContext)_localctx).definicionStruct = definicionStruct();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).definicionStruct.ast; 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				((DefinicionContext)_localctx).definicionFuncion = definicionFuncion();
				 ((DefinicionContext)_localctx).ast =  ((DefinicionContext)_localctx).definicionFuncion.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionVariableContext extends ParserRuleContext {
		public Definitions ast;
		public Token IDENT;
		public TipoContext t;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefinicionVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionVariable; }
	}

	public final DefinicionVariableContext definicionVariable() throws RecognitionException {
		DefinicionVariableContext _localctx = new DefinicionVariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definicionVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(T__0);
			setState(55);
			((DefinicionVariableContext)_localctx).IDENT = match(IDENT);
			setState(56);
			match(T__1);
			setState(57);
			((DefinicionVariableContext)_localctx).t = tipo();
			setState(58);
			match(T__2);
			 ((DefinicionVariableContext)_localctx).ast =  new DefinitionVariable(((DefinicionVariableContext)_localctx).IDENT, ((DefinicionVariableContext)_localctx).t.ast, "global"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionStructContext extends ParserRuleContext {
		public Definitions ast;
		public Token IDENT;
		public BodyStructContext b;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public BodyStructContext bodyStruct() {
			return getRuleContext(BodyStructContext.class,0);
		}
		public DefinicionStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionStruct; }
	}

	public final DefinicionStructContext definicionStruct() throws RecognitionException {
		DefinicionStructContext _localctx = new DefinicionStructContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definicionStruct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(T__3);
			setState(62);
			((DefinicionStructContext)_localctx).IDENT = match(IDENT);
			setState(63);
			match(T__4);
			setState(64);
			((DefinicionStructContext)_localctx).b = bodyStruct();
			setState(65);
			match(T__5);
			 ((DefinicionStructContext)_localctx).ast =  new DefinitionStruct(((DefinicionStructContext)_localctx).IDENT, ((DefinicionStructContext)_localctx).b.list); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyStructContext extends ParserRuleContext {
		public List<Definitions> list = new ArrayList<Definitions>();
		public Token i;
		public TipoContext t;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public BodyStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bodyStruct; }
	}

	public final BodyStructContext bodyStruct() throws RecognitionException {
		BodyStructContext _localctx = new BodyStructContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_bodyStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(68);
				((BodyStructContext)_localctx).i = match(IDENT);
				setState(69);
				match(T__1);
				setState(70);
				((BodyStructContext)_localctx).t = tipo();
				setState(71);
				match(T__2);
				 _localctx.list.add(new DefinitionVariable(((BodyStructContext)_localctx).i, ((BodyStructContext)_localctx).t.ast,"struct")); 
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionFuncionContext extends ParserRuleContext {
		public Definitions ast;
		public Token i1;
		public ParamContext p1;
		public DefinicionInsideFunctionContext d1;
		public SentenciasContext s1;
		public Token i2;
		public ParamContext p2;
		public TipoContext t2;
		public DefinicionInsideFunctionContext d2;
		public SentenciasContext s2;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParamContext param() {
			return getRuleContext(ParamContext.class,0);
		}
		public DefinicionInsideFunctionContext definicionInsideFunction() {
			return getRuleContext(DefinicionInsideFunctionContext.class,0);
		}
		public SentenciasContext sentencias() {
			return getRuleContext(SentenciasContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefinicionFuncionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionFuncion; }
	}

	public final DefinicionFuncionContext definicionFuncion() throws RecognitionException {
		DefinicionFuncionContext _localctx = new DefinicionFuncionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_definicionFuncion);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				((DefinicionFuncionContext)_localctx).i1 = match(IDENT);
				setState(80);
				match(T__6);
				setState(81);
				((DefinicionFuncionContext)_localctx).p1 = param();
				setState(82);
				match(T__7);
				setState(83);
				match(T__4);
				setState(84);
				((DefinicionFuncionContext)_localctx).d1 = definicionInsideFunction();
				setState(85);
				((DefinicionFuncionContext)_localctx).s1 = sentencias();
				setState(86);
				match(T__8);
				 ((DefinicionFuncionContext)_localctx).ast =  new DefinitionFuncion(((DefinicionFuncionContext)_localctx).i1, new TypeVoid(), ((DefinicionFuncionContext)_localctx).p1.list, ((DefinicionFuncionContext)_localctx).d1.list, ((DefinicionFuncionContext)_localctx).s1.list); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				((DefinicionFuncionContext)_localctx).i2 = match(IDENT);
				setState(90);
				match(T__6);
				setState(91);
				((DefinicionFuncionContext)_localctx).p2 = param();
				setState(92);
				match(T__7);
				setState(93);
				match(T__1);
				setState(94);
				((DefinicionFuncionContext)_localctx).t2 = tipo();
				setState(95);
				match(T__4);
				setState(96);
				((DefinicionFuncionContext)_localctx).d2 = definicionInsideFunction();
				setState(97);
				((DefinicionFuncionContext)_localctx).s2 = sentencias();
				setState(98);
				match(T__8);
				 ((DefinicionFuncionContext)_localctx).ast =  new DefinitionFuncion(((DefinicionFuncionContext)_localctx).i2, ((DefinicionFuncionContext)_localctx).t2.ast, ((DefinicionFuncionContext)_localctx).p2.list, ((DefinicionFuncionContext)_localctx).d2.list, ((DefinicionFuncionContext)_localctx).s2.list); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionInsideFunctionContext extends ParserRuleContext {
		public List<Definitions> list = new ArrayList<Definitions>();
		public DefinicionVariableLocalContext d;
		public List<DefinicionVariableLocalContext> definicionVariableLocal() {
			return getRuleContexts(DefinicionVariableLocalContext.class);
		}
		public DefinicionVariableLocalContext definicionVariableLocal(int i) {
			return getRuleContext(DefinicionVariableLocalContext.class,i);
		}
		public DefinicionInsideFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionInsideFunction; }
	}

	public final DefinicionInsideFunctionContext definicionInsideFunction() throws RecognitionException {
		DefinicionInsideFunctionContext _localctx = new DefinicionInsideFunctionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_definicionInsideFunction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(103);
				((DefinicionInsideFunctionContext)_localctx).d = definicionVariableLocal();
				_localctx.list.add(((DefinicionInsideFunctionContext)_localctx).d.ast);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinicionVariableLocalContext extends ParserRuleContext {
		public Definitions ast;
		public Token IDENT;
		public TipoContext t;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefinicionVariableLocalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definicionVariableLocal; }
	}

	public final DefinicionVariableLocalContext definicionVariableLocal() throws RecognitionException {
		DefinicionVariableLocalContext _localctx = new DefinicionVariableLocalContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_definicionVariableLocal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__0);
			setState(112);
			((DefinicionVariableLocalContext)_localctx).IDENT = match(IDENT);
			setState(113);
			match(T__1);
			setState(114);
			((DefinicionVariableLocalContext)_localctx).t = tipo();
			setState(115);
			match(T__2);
			 ((DefinicionVariableLocalContext)_localctx).ast =  new DefinitionVariable(((DefinicionVariableLocalContext)_localctx).IDENT, ((DefinicionVariableLocalContext)_localctx).t.ast, "local"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public List<Definitions> list = new ArrayList<Definitions>();
		public Token i1;
		public TipoContext t1;
		public Token i2;
		public TipoContext t2;
		public List<TerminalNode> IDENT() { return getTokens(GrammarParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(GrammarParser.IDENT, i);
		}
		public List<TipoContext> tipo() {
			return getRuleContexts(TipoContext.class);
		}
		public TipoContext tipo(int i) {
			return getRuleContext(TipoContext.class,i);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(118);
				((ParamContext)_localctx).i1 = match(IDENT);
				setState(119);
				match(T__1);
				setState(120);
				((ParamContext)_localctx).t1 = tipo();
				 _localctx.list.add(new DefinitionVariable(((ParamContext)_localctx).i1, ((ParamContext)_localctx).t1.ast, "parameter")); 
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__9) {
					{
					{
					setState(122);
					match(T__9);
					setState(123);
					((ParamContext)_localctx).i2 = match(IDENT);
					setState(124);
					match(T__1);
					setState(125);
					((ParamContext)_localctx).t2 = tipo();
					 _localctx.list.add(new DefinitionVariable(((ParamContext)_localctx).i2, ((ParamContext)_localctx).t2.ast, "parameter")); 
					}
					}
					setState(132);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentence ast;
		public ExprContext ex;
		public ExprContext left;
		public ExprContext right;
		public ExprContext condition;
		public SentenciasContext cierto;
		public SentenciasContext falso;
		public ExprContext ret;
		public Token IDENT;
		public ParamExprContext r;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<SentenciasContext> sentencias() {
			return getRuleContexts(SentenciasContext.class);
		}
		public SentenciasContext sentencias(int i) {
			return getRuleContext(SentenciasContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParamExprContext paramExpr() {
			return getRuleContext(ParamExprContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_sentencia);
		int _la;
		try {
			setState(200);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(T__10);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__22) | (1L << T__23) | (1L << T__35) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					setState(136);
					((SentenciaContext)_localctx).ex = expr(0);
					}
				}

				setState(139);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new SentencePrint(((SentenciaContext)_localctx).ex == null ? null : ((SentenciaContext)_localctx).ex.ast, "\n"); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(T__11);
				setState(142);
				((SentenciaContext)_localctx).ex = expr(0);
				setState(143);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new SentencePrint(((SentenciaContext)_localctx).ex.ast, " "); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(146);
				match(T__12);
				setState(147);
				((SentenciaContext)_localctx).ex = expr(0);
				setState(148);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new SentencePrint(((SentenciaContext)_localctx).ex.ast, ""); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				match(T__13);
				setState(152);
				((SentenciaContext)_localctx).ex = expr(0);
				setState(153);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new SentenceRead(((SentenciaContext)_localctx).ex.ast); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(156);
				((SentenciaContext)_localctx).left = expr(0);
				setState(157);
				match(T__14);
				setState(158);
				((SentenciaContext)_localctx).right = expr(0);
				setState(159);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new SentenceAssignment(((SentenciaContext)_localctx).left.ast, ((SentenciaContext)_localctx).right.ast); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(162);
				match(T__15);
				setState(163);
				match(T__6);
				setState(164);
				((SentenciaContext)_localctx).condition = expr(0);
				setState(165);
				match(T__7);
				setState(166);
				match(T__4);
				setState(167);
				((SentenciaContext)_localctx).cierto = sentencias();
				setState(168);
				match(T__8);
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__16) {
					{
					setState(169);
					match(T__16);
					setState(170);
					match(T__4);
					setState(171);
					((SentenciaContext)_localctx).falso = sentencias();
					setState(172);
					match(T__8);
					}
				}
